# LookaheadRAG

./: .env.example  .gitignore  README.md  pyproject.toml  quickstart.sh  requirements.txt  run.sh  run_tests.sh  run_web.sh  setup.sh
configs/: default.yaml
docs/: system_design.md
eval/: __init__.py  dataset_release.py  datasets.py  domain_eval.py  latency_constrained.py  metrics.py  runner.py  visualization.py
scripts/: build_index.py  demo.py  download_data.py  generate_dataset.py  run_evaluation.py  run_pareto_analysis.py  train_distilled.py
src/: __init__.py  config.py
src/baselines/: __init__.py  agentic_rag.py  multiquery_rag.py  planrag_baseline.py  standard_rag.py
src/engine/: __init__.py  anytime_optimizer.py  fallback.py  lookahead.py  pruning.py
src/planner/: __init__.py  binding_resolver.py  confidence.py  distilled.py  planner.py  reliability.py  schema.py
src/retriever/: __init__.py  parallel.py  reranker.py  vector_store.py
src/synthesizer/: __init__.py  context.py  evidence_verifier.py  prompts.py  synthesizer.py
tests/: __init__.py  test_anytime.py  test_binding.py  test_distilled.py  test_engine.py  test_integration.py  test_latency_metrics.py  test_metrics.py  test_planner.py  test_reliability.py  test_retriever.py  test_synthesizer.py  test_verification.py
web/: server.py
web/static/: index.html
